--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {background-color: powderblue;
 @font-face{
     font-family: 'Roboto',san-serif;
 }
-.box{
+box {
 max-width:400px;
 max-height:200px;
 margin-top:20px;
@@ -16,7 +16,7 @@ padding-top:25px;
 border-top: 10p solid blue;
 border-bottom: 5p dotted solid black;
 }
-
+p.ex1{display: none;}
 a:hover{
     color:red
 }
@@ -77,7 +77,7 @@ width:50%
 }
 
 
-.box2{
+box2 {
 height:400px;
 width:200px;
 margin: 10p 5p 10p 5p;
