--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {background-color: powderblue;
 @font-face{
     font-family: 'Roboto',san-serif;
 }
-box {
+div {
 max-width:400px;
 max-height:200px;
 margin-top:20px;
@@ -77,7 +77,7 @@ width:50%
 }
 
 
-box2 {
+li {
 height:400px;
 width:200px;
 margin: 10p 5p 10p 5p;
