--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ a:hover{
 b:active{
     color:black
 }
-p,
+
 .flex-container{
     grid-column-start:1;
     grid-column-end:4;
@@ -38,7 +38,7 @@ p,
     flex-flow:column wrap;
     background-color:green
 }
-.flex-container > inside{
+.flex-container > div{
     background-color:white;
     font-size:40px;
 }
@@ -80,8 +80,8 @@ width:10mm
 width:50%
 }
 
-p,
-.box2 {
+
+li.box2 {
 background-color:white;
 height:100px;
 width:200px;
