--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ b:active{
 }
 
 .flex-container{
+    display:flex;
     grid-column-start:1;
     grid-column-end:4;
     grid-row-start:1;
@@ -42,7 +43,7 @@ b:active{
     background-color:white;
     font-size:40px;
 }
-#one{
+/*#one{
     display:inline-block;
     width:50px;
     height:50px;
@@ -57,7 +58,7 @@ b:active{
     position:absolute;
     top:20px;
     background:blueviolet
-}
+}*/
 div.a{
 test-allign: center;
 }
